# django-project-template

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  requirements.txt  site.yml  swagger.yaml
project/: settings.py-tpl  wsgi.py-tpl
template/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
template/commands/management/commands/: runserver_test.py  sync_events.py
template/deployment/defaults/: main.yml
template/deployment/tasks/: main.yml
template/deployment/templates/: configmap.yml  deployment.yml  ingress.yml  secret.yml  service.yml  servicemonitor.yml
template/project/: builders.py  settings.py  urls.py  wsgi.py
