[tool.poetry]
name = "@= project_name =@"
version = "1.0.0"
description = "@= description =@"
authors = ["EntwicklerHeld <hallo@entwicklerheld.de>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "~=3.1.0"
pillow = "~=8.3.2"
dj-database-url = "~=0.5.0"
docker-database-url = "~=1.5.1"
dj-static = "~=0.0.6"
gunicorn = "~=20.0.4"
teamcity-messages = "~=1.28"
psycopg2-binary = "~=2.9.3"
entwicklerheld-events = "~=1.12.1"
djangorestframework = "~=3.12.2"
polylith-cors-middleware = "~=1.1.2"
django-prometheus = "~=2.1.0"
PyJWT = "~=1.7.1"
"boto3" = "~=1.16.34"
django-storages = "~=1.10.1"
sentry-sdk = "~=0.19.5"
django-redis = "~=4.12.1"
requests = "~=2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "entwicklerheld"
url = "https://entwicklerheld.jfrog.io/artifactory/api/pypi/default-pypi/simple"
secondary = true